# msla-thumbs

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  thumbnail.json
plugin/: CMakeLists.txt  com.connorcode.last-watched.metainfo.xml  thumbnail.json
plugin/include/: preview  previews
plugin/mime/: application-vnd.nano3d.nanodlp.xml
plugin/src/: image.cpp  image.hpp  msla_thumbs.cpp  msla_thumbs.hpp
preview/: Cargo.toml  build.rs
preview/src/: lib.rs
previews/: Cargo.toml
previews/src/: lib.rs
src/: msla_thumbs.cpp  msla_thumbs.hpp
